2006-04-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* io-jpeg.c (gdk_pixbuf__jpeg_image_load_increment): Use spinguard to
	avoid infinite looping also when num_left > 0.
	* io-jpeg.c (gdk_pixbuf__jpeg_image_stop_load): Make sure the return
	value matches error status, to ensure the caller can handle 'error'
	correctly.
	* io-png.c (png_info_callback): Make sure 'error' is set on error.
	N#26464

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* io-png.c (png_text_to_pixbuf_option): Avoid loading iconv if the
	text is plain ASCII as it wastes quite a bit of memory for no benefit.

2006-01-30  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS.

	* gdk-pixbuf-io.c (_gdk_pixbuf_load_module_unlocked): Use
	G_MODULE_BIND_LOCAL flags when opening modules.

Thu Nov  3 12:23:17 2005  Tim Janik  <timj@gtk.org>

	* io-ico.c (DecodeHeader): removed bogus HeaderSize<0 check (right
	after initialization from unsigned variables).
	synced with upstream HEAD.

2005-10-07  Michael Natterer  <mitch@imendio.com>

	Merged the 2.4 -> 2.10 diff, excluding the patches that have
	already been applied:

    2005-06-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-i18n.h: Define ngettext() in the non-NLS
	case.  (#308717, Peter S. Mazinger)

    2005-06-08  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_read_next_value): Check for overflow.
	(#306394, Morten Welinder)

    2005-04-29  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Use $(NM), not nm directly. (#301299, 
	Nguyen Thai Ngoc Duy)

    2005-04-09  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback): 
	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)

    2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	* io-pcx.c: No debugging output, please. (#173107,
	John Ellis)

    2005-04-03  Hans Breuer  <hans@breuer.org>

	* makefile.msc : follow .symbols changes

    2005-03-30  Matthias Clasen  <mclasen@redhat.com>
